Bug 1642922 - Tweak scroll-padding implementation to also account for visibility. r=hiro

The previous implementation made us think that stuff was visible when in
fact it was not.

Differential Revision: https://phabricator.services.mozilla.com/D79345